kubernetes/orion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: orion
  name: orion
spec:
  selector:
    matchLabels:
      run: orion
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: orion
    spec:
      containers:
      - image: gcr.io/busviz/orion:latest
        imagePullPolicy: IfNotPresent
        name: orion
        resources:
          requests:
            cpu: 0.03
