kubernetes/orion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-api-service
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 4000
  selector:
    run: orion-api-pod
  type: LoadBalancer
